# herding_llamas

./: .gitignore  LICENSE  README.md  check_version.sh  pyproject.toml  test_queue.py
herding_llamas/herder/: app.py  app_backup.py  database.py  herder.py  herder_app.py  langchain_example.py  llamas.yml  llm_langchain.py  llm_queue.py  prompter.py  prompts.yml  roles.yml  startup.sh  together_startup.sh  users.yml  wrapper_together.py
herding_llamas/herder/UI/: app.css  app.js  chatApiModule.js  chatUiModule.js  index.html
herding_llamas/herder/UI/templates/: feedback_form.mustache  feedback_table.mustache  model_card.mustache  prompt_form.mustache  prompts_table.mustache
herding_llamas/herder/llama_wrappers/: readme.txt  together.py
herding_llamas/llama/: app.py  conf.yml  model.py  nvidia_example.xml  startup.sh  startup_one.sh  startup_two.sh  sys_stats.py
herding_llamas/llama/loaders/: load_4bit.py  load_default.py  load_gptq.py  load_requirements.txt
