[tool.poetry]
name = "herding-llamas"
version = "0.1.0"
description = ""
authors = ["Ralph <szeta@gmx.net>"]
readme = "README.md"
packages = [{include = "herding_llamas"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
